r156 - october, 8, 2009
    * membre : actions > new action requestSubscription
    * membre : templates > loginSuccess > link to request a member subscription
    * membre : templates > _form has been refactored
    * schema.yml : membre.actif is now an integer and not a boolean
    * model has been rebuilt
    

r155 - october, 7, 2009
    * StringToolsTest : new test for generatePassword method
    

r154 - october, 7, 2009
    * membre : security.yml > edit and show credentials have been documented
    * /apps/front/lib/form/ForgottenPasswordForm : new class
    * association : actions > new action Forgottenpassword
    * association : templates > loginSuccess.php > link if forgotten password
    * StringTools : new method generatePassword()
    * /lib/misc/MailerFactory.class.php : new class to generate swift object
    * association : actions > executeMailing > use new mailer factory class
    * membre : actions > index > redirect to show if we don't have access to
      index
    

r153 - october, 7, 2009
    * membre : security.yml > removed credential auto-checking for edit and show
    * membre : actions > edit and show actions are available for the user
    * membrePeer.php : new const IS_PENDING
    * association : actions > login > redirect to user profile if he can't list
      the members (default homepage)


r152 - october, 3, 2009
    * /web/css : new 'browse' button
    

r151 - october, 3, 2009
    * membre : templates > _form > custom 'browse' button


r150 - october, 3, 2009
    * association : actions > logout > redirect to homepage
    * association : templates > loginSuccess.php > new welcome message


r149 - october, 3, 2009
    * activite : templates > indexSuccess.php > delete link is displayed, 
      warning message is up date
    

r148 - october, 3, 2009
    * membre : templates > showSuccess.php > email is crypted thanks to mail
      helper
    * membre : templates > indexSuccess.php > email is crypted thanks to mail
      helper

